se agrego el tamaño de cada deck

--- a/battle.html
+++ b/battle.html
@@ -21,8 +21,12 @@
     <div class="background">
         <div id="cartasManoYugi" class="container">
             <div class="row d-flex justify-content-center">
-                <div class="col-2 col-md-1 fila">
+                <div class="col-2 col-md-1 fila d-flex flex-column text-center ">
                     <img src="img/mazo.png" id="mazoYugi">
+
+                    <div id="totalDeckYugi" class="mt-2">
+                        <h5>45</h5>
+                    </div>
                 </div>
                 <div class="col-2 col-md-1 fila">
                     <img src="img/mazo.jpg" id="cy1" data-status="lleno">
@@ -271,10 +275,15 @@
                 </div>
 
 
-                <div class="col-2 col-md-1 fila">
-                    <img src="img/mazo.png" id="mazoPlayer">
+                <div class="col-2 col-md-1 d-flex flex-column text-center fila">
+                    <img src="img/mazo.png" id="mazoPlayer" class="mb-2">
+
+                    <div id="totalDeckPlayer">
+                        <h5>45</h5>
+                    </div>
                 </div>
 
+              
             </div>
         </div>
 
