Se tienen varios bugs, pero es jugable, fin.

--- a/battle.html
+++ b/battle.html
@@ -191,22 +191,22 @@
             <div id="tableroMagicasPlayer" class="container">
                 <div class="row d-flex justify-content-center">
 
-                    <div class="col-2 col-md-1 fila" id="pma1" data-id="pma1" data-position="1" data-categoria="magicas"
+                    <div class="col-2 col-md-1 fila" id="pma1" data-id="pma1" data-position="1" data-categoria="magicas-player"
                         data-status="vacio">
                     </div>
-                    <div class="col-2 col-md-1 fila" id="pma2" data-id="pma2" data-position="2" data-categoria="magicas"
-                        data-status="vacio">
-
-                    </div>
-                    <div class="col-2 col-md-1 fila" id="pma3" data-id="pma3" data-position="3" data-categoria="magicas"
+                    <div class="col-2 col-md-1 fila" id="pma2" data-id="pma2" data-position="2" data-categoria="magicas-player"
                         data-status="vacio">
 
                     </div>
-                    <div class="col-2 col-md-1 fila" id="pma4" data-id="pma4" data-position="4" data-categoria="magicas"
+                    <div class="col-2 col-md-1 fila" id="pma3" data-id="pma3" data-position="3" data-categoria="magicas-player"
                         data-status="vacio">
 
                     </div>
-                    <div class="col-2 col-md-1 fila" id="pma5" data-id="pma5" data-position="5" data-categoria="magicas"
+                    <div class="col-2 col-md-1 fila" id="pma4" data-id="pma4" data-position="4" data-categoria="magicas-player"
+                        data-status="vacio">
+
+                    </div>
+                    <div class="col-2 col-md-1 fila" id="pma5" data-id="pma5" data-position="5" data-categoria="magicas-player"
                         data-status="vacio">
 
                     </div>
